p3/confs/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: argocd-server
                port: 
                    number: 443
